feat: Add the erase option

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
-
-    <button style="display: block;">RESIZE GRID</button>
+    <div class="buttons">
+        <img id="pen" src="images/pen.png" alt="pen">
+        <button style="display: block;">RESIZE GRID</button>
+        <img id="eraser" src="images/eraser.png" alt="eraser">
+    </div>
     <div class="container"></div>
 
 </body>
