--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <div class="buttons">
-        <img id="pen" src="images/pen.png" alt="pen">
+        <img id="rainbow" src="images/rainbow-colorless.png" alt="rainbow">
         <button style="display: block;">RESIZE GRID</button>
+        <img id="pen" src="images/pen.png" alt="pen">
         <img id="eraser" src="images/eraser.png" alt="eraser">
     </div>
     <div class="container"></div>
