feat: Make progressive darkening effect (gradient) an option

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="buttons">
+        <img id="gradient" src="images/gradient.png" alt="gradient">
         <img id="rainbow" src="images/rainbow-colorless.png" alt="rainbow">
         <button style="display: block;">RESIZE GRID</button>
         <img id="pen" src="images/pen.png" alt="pen">
