feat: Add color picker
Remove pen option and toggle eraser button to draw or erase.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img id="gradient" src="images/gradient.png" alt="gradient">
         <img id="rainbow" src="images/rainbow-colorless.png" alt="rainbow">
         <button style="display: block;">RESIZE GRID</button>
-        <img id="pen" src="images/pen.png" alt="pen">
+        <input type="color" id="colorInput">
         <img id="eraser" src="images/eraser.png" alt="eraser">
     </div>
     <div class="container"></div>
