feat: Show a tooltip text when the mouse moves over the buttons

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <div class="buttons">
-        <img id="gradient" src="images/gradient.png" alt="gradient">
-        <img id="rainbow" src="images/rainbow-colorless.png" alt="rainbow">
+        <img id="gradient" src="images/gradient.png" alt="gradient" title="Gradient">
+        <img id="rainbow" src="images/rainbow-colorless.png" alt="rainbow" title="Rainbow">
         <button style="display: block;">RESIZE GRID</button>
-        <input type="color" id="colorInput">
-        <img id="eraser" src="images/eraser.png" alt="eraser">
+        <input type="color" id="colorInput" title="Pick a color">
+        <img id="eraser" src="images/eraser.png" alt="eraser" title="Eraser">
     </div>
     <div class="container"></div>
 
